--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-confirm-alert": "^2.7.0",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-router-dom": "^5.3.0",
