--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
